# t-project-practicum

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2024_10_27_2053-first_migration.py  2024_10_30_1254-firts_mirgation.py  2024_10_30_1439-swap_chat_id_to_bigint.py  2024_10_30_1456-swap_chat_id_to_bigint.py  2024_10_30_1703-init.py  2024_12_08_1730-.py  2024_12_09_1528-add_column_route.py
app/: main.py
app/core/: base.py  config.py  db.py
app/curd/: trip.py  user.py
app/handlers/: commands.py  plan_trip_commands.py  trip-commands.py  trip_commands.py
app/keyboards/: builders.py  keybords.py  reply.py
app/middlewares/: db_session_middleware.py
app/models/: transport_enum.py  trip.py  user.py
app/schemas/: coordinates.py  route.py  trip.py  user.py
app/utils/: additional_trip_info.py  get_timezone.py  navigation_states.py  notifiaction.py  state.py  validation.py
celery_queue/: create_celery.py  tasks.py
